--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ crossorigin="anonymous"></script>
 <body>
 <div id = 'contaiiner'>
 <h id = "head">Totally Trivial Trivia!</h>
+<img src="assets/images/USA.jpg" alt="Usa flag" id = 'about-image'/>
+<img src="assets/images/Bangladesh.jpg" alt="Bangladesh flag" id = 'about-image1' />
     <div id = 'subContainer'>
     <button id ="start";>Start the game</button>
 
