--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@ src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/TheBlacklist/font.css">
+
 </head>
+
 <body>
 <div id = 'contaiiner'>
 <h id = "head">Totally Trivial Trivia!</h>
+ <h1 class = 'h1'> USA & Bangladesh</h1>
 <img src="assets/images/USA.jpg" alt="Usa flag" id = 'about-image'/>
 <img src="assets/images/Bangladesh.jpg" alt="Bangladesh flag" id = 'about-image1' />
     <div id = 'subContainer'>
     <button id ="start";>Start the game</button>
+    <img src="assets/images/mobilevalprop1.png" alt="" id = 'image2'>
 
     </div>
 </div>
